<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ZATKA E-Invoicing</string>
    <string name="update_date">August 2021</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="items">Items</string>
    <string name="clients">Clients</string>
    <string name="sales">Sales</string>
    <string name="expenses">Expenses</string>
    <string name="invoices">Invoices</string>
    <string name="reports">Reports</string>
    <string name="inventory">purchase</string>
    <string name="add_inventory"> Add Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_menu_home">Home</string>
    <string name="nav_drawer_menu_clients">Customers</string>
    <string name="nav_drawer_menu_supplier">Suppliers</string>
    <string name="nav_drawer_menu_items">Items</string>
    <string name="nav_drawer_menu_inventory">purchase</string>
    <string name="nav_drawer_menu_expenses">Expenses</string>
    <string name="nav_drawer_menu_sales">Sales</string>
    <string name="nav_drawer_menu_sale_return">Sale Return</string>
    <string name="nav_drawer_menu_purchase_return">Purchase Return</string>
    <string name="nav_drawer_menu_sale_invoice">Sale Invoices</string>
    <string name="nav_drawer_menu_purchase_invoice"> Purchase Invoices</string>
    <string name="nav_drawer_menu_sale_return_invoice">Sale Return Invoices</string>
    <string name="nav_drawer_menu_purchase_return_invoice"> Purchase Return Invoices</string>
    <string name="nav_drawer_menu_report">Reports</string>
    <string name="login_remember_me">Keep me Signed in</string>
    <string name="login_login">Login</string>
    <string name="login_email">Email</string>
    <string name="splash_smart_bills">Smart Bills</string>
    <string name="search">Search Here...</string>
    <string name="fab_content_clients">fab button</string>
    <string name="add_clients">Add Clients</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_items">Add Items</string>
    <string name="update_clients">Update Clients</string>
    <string name="update_expense">Update Expense</string>
    <string name="update_items">Update Items</string>
    <string name="fab_export">export</string>
    <string name="no_clients_found">No Clients Found</string>
    <string name="no_customer_found">No Customer Found</string>
    <string name="no_supplier_found">No Supplier Found</string>
    <string name="no_expenses_found">No Expenses Found</string>
    <string name="no_items_found">No Items Found</string>
    <string name="no_return_found">No Return Found</string>
    <string name="no_pending_orders">No Pending Orders</string>
    <string name="no_completed_orders">No Completed Orders</string>
    <string name="no_canceled_orders">No Canceled Orders</string>
    <string name="no_items_in_cart">No Items Found in Cart!</string>
    <string name="data_exporting_please_wait">data exporting please wait</string>
    <string name="data_successfully_exported">data successfully exported</string>
    <string name="data_export_fail">data export failed</string>
    <string name="error">error!</string>
    <string name="name">Name</string>
    <string name="item_name">Item Name</string>
    <string name="content_description">content Description</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="add_client_title">Fill up client information</string>
    <string name="add_expense_title">Fill up expense information</string>
    <string name="add_item_title">Fill up item information</string>
    <string name="inventory_return_title">Return Inventory</string>
    <string name="edit_expense_title">Update expense information</string>
    <string name="edit_item_title">Update item information</string>
    <string name="client_successfully_added">Client successfully added</string>
    <string name="expense_successfully_added">Expense successfully added</string>
    <string name="failed">Failed</string>
    <string name="enter_client_address">Enter client address</string>
    <string name="client_email">enter client email</string>
    <string name="client_phone_error">enter valid phone number</string>
    <string name="expense_amount_error">enter an amount</string>
    <string name="expense_date_error">select a date</string>
    <string name="expense_time_error">select a time</string>
    <string name="client_name_error">enter client name</string>
    <string name="expense_name_error">enter expense name</string>
    <string name="update">Update</string>
    <string name="update_client_information">Update Client Information</string>
    <string name="want_to_delete_client">Want to delete this Client?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="client_deleted">Client Deleted</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="note">"Note: "</string>
    <string name="want_to_delete_expense">Want to delete this expense?</string>
    <string name="expense_deleted">Expense deleted!</string>
    <string name="add_note">Note (optional)</string>
    <string name="add_amount">Amount</string>
    <string name="add_date">Date</string>
    <string name="add_time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="want_to_delete_item">Want to delete this item?</string>
    <string name="item_code">Item Code</string>
    <string name="item_category">Item Category</string>
    <string name="item_description">Item Description</string>
    <string name="item_buy_price">Item Buy price</string>
    <string name="item_sell_price">Item sell price</string>
    <string name="item_stock">Item stock</string>
    <string name="retrun_stock">Return stock</string>
    <string name="item_weight">Item weight</string>
    <string name="item_weight_unit">Item weight Unit</string>
    <string name="camera_permission">Camera permission required</string>
    <string name="qr_barcode_scanner">QR or BarCode Scanner</string>
    <string name="add_item_image">Add Item Image:</string>
    <string name="update_item_image">Update Item Image:</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="data">Data</string>
    <string name="import_from_excel">Import From Excel</string>
    <string name="no_file_found">No file found</string>
    <string name="data_importing_please_wait">Data importing please wait</string>
    <string name="data_successfully_imported">Data successfully imported</string>
    <string name="data_import_fail">Data import fail</string>
    <string name="product_category">Product Category</string>
    <string name="product_weight_unit">Product Weight Unit</string>
    <string name="type_something_to_search">Type something to search…</string>
    <string name="type_invoice_to_search">Type invoice to search…</string>
    <string name="item_name_cannot_be_empty">Item name can\'t be empty!</string>
    <string name="item_code_cannot_be_empty">Item code can\'t be empty!</string>
    <string name="item_category_cannot_be_empty">Item category can\'t be empty!</string>
    <string name="item_sell_price_cannot_be_empty">Item sell price can\'t be empty!</string>
    <string name="item_buy_price_cannot_be_empty">Item buy price can\'t be empty!</string>
    <string name="item_stock_cannot_be_empty">Item stock can\'t be empty!</string>
    <string name="item_successfully_added">Item successfully added</string>
    <string name="inventory_not_added">inventory is not update </string>
    <string name="inventory_added">inventory updated successfully </string>
    <string name="stock_retrun_msg">stock return successfully </string>
    <string name="no_data_found">No data found</string>
    <string name="sale_return">sale Return </string>
    <string name="purchase_return">purchase Return </string>
    <string name="price">Price</string>
    <string name="weight">Weight</string>
    <string name="item_added_to_cart">added to cart successfully!</string>
    <string name="already_added_to_cart">item already in cart</string>
    <string name="item_added_to_cart_failed_try_again">item added to cart failed try again</string>
    <string name="total_price">Total Price</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="due_amount">Due Amount</string>
    <string name="submit_order">Submit Order</string>
    <string name="all_items">All Items:</string>
    <string name="sale_cart">Sale Cart</string>
    <string name="pur_cart">Purchase Cart</string>
    <string name="order_details">Order Details</string>
    <string name="search_items">search items...</string>
    <string name="product_removed_from_cart">Product removed from cart</string>
    <string name="stock_limit_crossed">stock limit crossed</string>
    <string name="delete_item">Want to delete this item?</string>
    <string name="payment">Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="submit">submit</string>
    <string name="sub_total">Sub Total:</string>
    <string name="total_tax">Total Tax:</string>
    <string name="discount">Discount:</string>
    <string name="discount_cant_be_greater_than_total_price">Discount can\'t be grater then total cost.</string>
    <string name="cant_pay_more_then_due">"can't pay more then the due amount"</string>
    <string name="cant_pay_negative_or_empty_amount">"can't pay can't negative or empty amount"</string>
    <string name="due_cant_be_greater_than_total_price">Due money can\'t be grater then total cost.</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_supplier" tools:ignore="MissingTranslation">Select Supplier</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="select_order_type">Select Order Type</string>
    <string name="order_done_successful">Order done successful</string>
    <string name="status_pending">Pending</string>
    <string name="status_completed">Completed</string>
    <string name="order_status_dialog_txt">Please change order status to "completed" or "cancel"</string>
    <string name="print_receipt">Print receipt</string>
    <string name="generate_receipt">Generate receipt</string>
    <string name="total_due">Total Due</string>
    <string name="total_paid">Total paid</string>
    <string name="now_paid">Now paid</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_histories">Payment Histories</string>
    <string name="payment_details">Payment details</string>
    <string name="no_other_paymetns_yet">No other paymetns yet</string>
    <string name="pdf_invoice">PDF Invoice</string>
    <string name="print">Print</string>
    <string name="share">share</string>
    <string name="open_pdf">Open Pdf</string>
    <string name="open_with_external_pdf_reader">Open Pdf with external pdf reader</string>
    <string name="total_expense">Total Expense</string>
    <string name="year_number">Year: 2021</string>
    <string name="expense">Expense</string>
    <string name="products">Products</string>
    <string name="paid_due_percentage_of_total_sale"><![CDATA[Paid & Due percentage of Total Sale]]></string>
    <string name="no_description_available">no description available for this product</string>
    <string name="sell_price">Sell Price</string>
    <string name="buy_price">Buy Price</string>
    <string name="product_code">Product Code</string>
    <string name="other">Other</string>
    <string name="logout">Logout</string>
</resources>